--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest k3ut
+          pip install pytest k3ut k3utdocker k3utfjson
           pip install -e .
       - name: Test with pytest
         run: pytest -v
