--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -21,8 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest k3ut k3utdocker k3utfjson
-          pip install -e .
+          pip install -e ".[dev]"
       - name: Test with pytest
         run: pytest -v || [ $? -eq 5 ]  # Allow exit code 5 (no tests collected on CI)
 
